--- a/sass/base/_norm.scss
+++ b/sass/base/_norm.scss
@@ -1,15 +1,36 @@
+/*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+
+/*
+Document
+========
+*/
+
+/**
+Use a better box model (opinionated).
+*/
+* {
+	padding: 0;
+	margin: 0;
+}
+
 *,
 ::before,
 ::after {
-	margin: 0;
-	padding: 0;
 	box-sizing: border-box;
+}
+
+/**
+Use a more readable tab size (opinionated).
+*/
+
+html {
+	-moz-tab-size: 4;
+	tab-size: 4;
 }
 
 /**
 1. Correct the line height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
-3. Use a more readable tab size (opinionated).
 */
 
 html {
@@ -17,10 +38,6 @@ html {
 	/* 1 */
 	-webkit-text-size-adjust: 100%;
 	/* 2 */
-	-moz-tab-size: 4;
-	/* 3 */
-	tab-size: 4;
-	/* 3 */
 }
 
 /*
@@ -29,13 +46,18 @@ Sections
 */
 
 /**
-1. Remove the margin in all browsers.
-2. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
+Remove the margin in all browsers.
 */
 
 body {
 	margin: 0;
-	/* 1 */
+}
+
+/**
+Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
+*/
+
+body {
 	font-family:
 		system-ui,
 		-apple-system,
@@ -47,7 +69,6 @@ body {
 		sans-serif,
 		'Apple Color Emoji',
 		'Segoe UI Emoji';
-	/* 2 */
 }
 
 /*
@@ -145,7 +166,7 @@ Tabular data
 
 /**
 1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
-2. Correct table border color inheritance in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
 */
 
 table {
@@ -182,10 +203,12 @@ textarea {
 
 /**
 Remove the inheritance of text transform in Edge and Firefox.
+1. Remove the inheritance of text transform in Firefox.
 */
 
 button,
 select {
+	/* 1 */
 	text-transform: none;
 }
 
@@ -198,6 +221,7 @@ button,
 [type='reset'],
 [type='submit'] {
 	-webkit-appearance: button;
+	appearance: button;
 }
 
 /**
@@ -259,6 +283,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 [type='search'] {
 	-webkit-appearance: textfield;
 	/* 1 */
+	appearance: button;
 	outline-offset: -2px;
 	/* 2 */
 }
@@ -269,6 +294,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 
 ::-webkit-search-decoration {
 	-webkit-appearance: none;
+	appearance: button;
 }
 
 /**
@@ -279,6 +305,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 ::-webkit-file-upload-button {
 	-webkit-appearance: button;
 	/* 1 */
+	appearance: button;
 	font: inherit;
 	/* 2 */
 }
