--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,4 @@
 @import './base/norm';
-@import './'
-@import './base/base-style';
+@import './utils' / @import './base/base-style';
 
 @import './components/header';
