--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -3,20 +3,12 @@
 	gap: 30px;
 }
 
-.section-title {
-	text-align: center;
 
-	font-weight: 700;
-	font-size: 36px;
-	line-height: 1.16;
-	margin-bottom: 50px;
-}
-
-.work-list__item {
+&__item {
 	position: relative;
 }
 
-.work-list__title {
+&__title {
 	position: absolute;
 	text-transform: uppercase;
 	text-align: center;
