--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,11 +1,12 @@
-.header-container .logo {
+.logo {
 	text-decoration: none;
-	vertical-align: Top;
+	display: flex;
 
 	font-family: "Raleway", sans-serif;
+	margin-bottom: 20px;
 	font-weight: 700;
 	font-size: 26px;
-	line-height: 1.2307;
+	line-height: 1.1923;
 	letter-spacing: 0.03em;
 
 	color: var(--col--blue);
@@ -17,4 +18,10 @@
 	margin-right: 93px;
 
 	color: #000000;
+}
+
+.footer__logo {
+	text-decoration: none;
+
+	color: var(--colff--white);
 }
