--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,11 +6,14 @@
 @import './components/header-nav';
 @import './components/header-contact';
 @import './components/hero';
+@import './components/button';
 @import './components/features';
 @import './components/what-we-do';
 @import './components/our-company';
 @import './components/customers';
 @import './components/modal-window';
+@import './components/buton-close';
+@import './components/checkbox';
 @import './components/footer';
 @import './components/footer-form';
 @import './components/filter-button';
