--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,38 +1,35 @@
-.features-section__list {
-	display: flex;
-	gap: 30px;
-}
-
 .features-section {
 	padding-bottom: 0;
 
 	background-color: var(--colff--white);
-}
 
-.features-section__list .features-section__title {
-	text-transform: uppercase;
+	&__list {
+		display: flex;
+		gap: 30px;
+	}
 
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 1.14;
-}
+	&__title {
+		text-transform: uppercase;
 
-.features-section__list .features-section__text {
-	color: var(--col--lgrey);
-	font-size: 14px;
-	line-height: 1.7;
-}
+		font-weight: 700;
+		font-size: 14px;
+		line-height: 1.14;
+		margin-bottom: 10px;
+	}
 
-.features-section__container-icon {
-	background-color: #f5f4fa;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 30px;
-	width: 270px;
-	height: 120px;
-}
+	&__text {
+		color: var(--col--lgrey);
+		font-size: 14px;
+		line-height: 1.7;
+	}
 
-.features .title {
-	margin-bottom: 10px;
+	&__container-icon {
+		background-color: #f5f4fa;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 30px;
+		width: 270px;
+		height: 120px;
+	}
 }
