--- a/sass/components/_our-company.scss
+++ b/sass/components/_our-company.scss
@@ -8,7 +8,7 @@
 	padding-bottom: 30px;
 }
 
-.team-section .team-list__title {
+.team-secti.team-list__title {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.2;
