--- a/sass/components/_header-contact.scss
+++ b/sass/components/_header-contact.scss
@@ -5,27 +5,27 @@
 	margin-left: auto;
 	margin-right: 0;
 	gap: 50px;
-}
 
-.contact-list__item .contact-list__link {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	&__link {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
-	gap: 10px;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 1.14;
-	letter-spacing: 0.02em;
+		gap: 10px;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 1.14;
+		letter-spacing: 0.02em;
 
-	color: var(--col--lgrey);
-}
+		color: var(--col--lgrey);
+	}
 
-.contact-list .contact-list__link:focus,
-.contact-list .contact-list__link:hover {
-	color: var(--col--blue);
-}
+	&__link:focus,
+	&__link:hover {
+		color: var(--col--blue);
+	}
 
-.contact-list .contact-list__link {
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	&__link {
+		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
 }
