--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -1,50 +1,53 @@
-.modal-checkbox__title {
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	letter-spacing: 0.03em;
-	margin-bottom: 30px;
+.modal-checkbox {
 
-	color: var(--col--lgrey);
-}
+	&__title {
+		font-family: "Roboto", sans-serif;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: 0.03em;
+		margin-bottom: 30px;
 
-.modal-checkbox__linc {
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	letter-spacing: 0.03em;
-	text-decoration-line: underline;
+		color: var(--col--lgrey);
+	}
 
-	color: var(--col--blue);
-}
+	&__linc {
+		font-family: "Roboto", sans-serif;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: 0.03em;
+		text-decoration-line: underline;
 
-.modai-checkbox__label {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	gap: 8px;
-	margin-left: 15px;
+		color: var(--col--blue);
+	}
 
-	font-size: 14px;
-	line-height: 24px;
-	letter-spacing: 0.03em;
+	&__label {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		gap: 8px;
+		margin-left: 15px;
 
-	color: var(--col--lgrey);
-}
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: 0.03em;
 
-.modal-checkbox__title {
-	position: absolute;
-	top: 3px;
-	left: 0px;
-	width: 16px;
-	height: 15px;
-	background-image: url(../images/check_off.svg);
-}
+		color: var(--col--lgrey);
+	}
 
-.modal-checkbox:checked+.modal-checkbox__title {
-	background-image: url(../images/check_on.svg);
+	&__title {
+		position: absolute;
+		top: 3px;
+		left: 0px;
+		width: 16px;
+		height: 15px;
+		background-image: url(../images/check_off.svg);
+	}
+
+	.modal-checkbox:checked+&__title {
+		background-image: url(../images/check_on.svg);
+	}
 }
