--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -29,7 +29,7 @@
 	transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal.is-hidden .modal-window {
+.is-hidden .modal-window {
 	transform: translate(-50%, -50%) scale(2);
 }
 
@@ -97,6 +97,9 @@
 	border-radius: 4px;
 }
 
+.modal-send {
+	margin-top: 30px;
+}
 
 
 .modal-send__button {
@@ -120,9 +123,6 @@
 	border: 0;
 }
 
-.modal-send {
-	margin-top: 30px;
-}
 
 .form-box__icon {
 	position: relative;
