--- a/sass/components/_portfolio-grid.scss
+++ b/sass/components/_portfolio-grid.scss
@@ -6,14 +6,30 @@
 	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-images {
+	position: relative;
+	overflow: hidden;
+}
+
 .portfolio-row__text {
 	padding: 20px 24px;
 	list-style: none;
+	display: block;
 
 	border-left: 1px solid #eeeeee;
 	border-right: 1px solid #eeeeee;
 	border-bottom: 1px solid #eeeeee;
 	color: var(--colff--white);
+}
+
+.portfolio-section {
+	font-family: "Roboto", sans-serif;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 1.875;
+	letter-spacing: 0.03em;
+
+	color: var(--col--lgrey);
 }
 
 .portfolio-title {
@@ -28,55 +44,41 @@
 	color: var(--col--black);
 }
 
-.portfolio-section {
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-size: 16px;
-	line-height: 1.875;
-	letter-spacing: 0.03em;
+.portfolio-list {
 
-	color: var(--col--lgrey);
-}
+	&__title {
+		transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
 
-.portfolio-list__title {
-	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-images {
-	position: relative;
-	overflow: hidden;
-}
 
-.portfolio-list__text {
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	padding: 63px 24px;
-	font-size: 18px;
-	line-height: 1.5555;
-	letter-spacing: 0.03em;
-	transform: translateY(101%);
-	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	&__text {
+		font-family: "Roboto", sans-serif;
+		font-style: normal;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+		padding: 63px 24px;
+		font-size: 18px;
+		line-height: 1.5555;
+		letter-spacing: 0.03em;
+		transform: translateY(101%);
+		transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-	background: rgba(33, 150, 243, 0.9);
-	color: var(--colff--white);
-}
+		background: rgba(33, 150, 243, 0.9);
+		color: var(--colff--white);
+	}
 
-.portfolio-link:hover .portfolio-list__text,
-.portfolio-link:focus .portfolio-list__text {
-	transform: translateY(0);
-}
+	.portfolio-link:hover &__text,
+	.portfolio-link:focus &__text {
+		transform: translateY(0);
+	}
 
-.portfolio-list__title:hover,
-.portfolio-list__title:focus {
-	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-		1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-row__texte {
-	display: block;
+	&__title:hover,
+	&__title:focus {
+		box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+			1px 4px 6px rgba(0, 0, 0, 0.16);
+	}
 }
