--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import './components/header-contact';
 @import './components/hero';
 @import './components/button';
+@import './components/section-title';
 @import './components/features';
 @import './components/what-we-do';
 @import './components/our-company';
@@ -15,6 +16,7 @@
 @import './components/buton-close';
 @import './components/checkbox';
 @import './components/footer';
+@import './components/social-icon';
 @import './components/footer-form';
 @import './components/filter-button';
 @import './components/portfolio-grid';
