--- a/sass/components/_our-company.scss
+++ b/sass/components/_our-company.scss
@@ -2,14 +2,14 @@
 	background-color: #f5f4fa;
 }
 
-.team-section {
-	padding-top: 30px;
-	padding-bottom: 30px;
-}
-
 .team-list {
 	display: flex;
 	gap: 30px;
+
+	&__team-section {
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
 
 	&__title {
 		font-weight: 500;
@@ -18,16 +18,12 @@
 		text-align: center;
 	}
 
-
-
 	&__text {
 		text-align: center;
-
 		font-size: 16px;
 		line-height: 1.2;
 		margin-top: 10px;
 		margin-bottom: 30px;
-
 		color: var(--col--lgrey);
 	}
 
@@ -40,7 +36,6 @@
 	&__social {
 		display: flex;
 		justify-content: center;
-
 		gap: 10px;
 	}
 }
@@ -50,11 +45,9 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-
 		width: 44px;
 		height: 44px;
 		border-radius: 50%;
-
 		color: #afb1b8;
 	}
 
