--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -36,10 +36,6 @@
 		width: 100%;
 	}
 
-
-
-
-
 	&__link:hover,
 	&__link:focus {
 		color: var(--col--blue);
@@ -49,6 +45,9 @@
 		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
 
+	&__link:after {
+		transition: 700ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
 
 	&__link--current {
 		color: var(--col--blue);
