--- a/css/main.css
+++ b/css/main.css
@@ -408,17 +408,6 @@ button {
           align-items: center;
 }
 
-.main-nav__link::after {
-  content: "";
-  position: absolute;
-  display: block;
-  border-radius: 2px;
-  width: 0;
-  left: 0;
-  height: 4px;
-  bottom: -1%;
-  background-color: var(--col--blue);
-}
 .main-nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -429,9 +418,28 @@ button {
   gap: 50px;
 }
 .main-nav__item {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+.main-nav__item {
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+.main-nav__link::after {
+  content: "";
+  position: absolute;
+  display: block;
+  border-radius: 2px;
+  width: 0;
+  left: 0;
+  height: 4px;
+  bottom: -1%;
+  background-color: var(--col--blue);
 }
 .main-nav__link:focus::after, .main-nav__link:hover::after, .main-nav__link--current:after {
   width: 100%;
