--- a/sass/base/_base-style.scss
+++ b/sass/base/_base-style.scss
@@ -38,6 +38,17 @@ button {
 	width: 1200px;
 	padding-left: 15px;
 	padding-right: 15px;
+
+	@media screen and (min-width: 480px) {
+		width: 480px;
+		margin: 15px;
+		flex-wrap: wrap;
+	}
+
+	@media screen and (min-width: 768px) {}
+
+	@media screen and (min-width: 1200px) {}
+
 }
 
 
