--- a/sass/base/_base-style.scss
+++ b/sass/base/_base-style.scss
@@ -39,11 +39,7 @@ button {
 	padding-left: 15px;
 	padding-right: 15px;
 
-	@media screen and (min-width: 480px) {
-		width: 480px;
-		margin: 15px;
-		flex-wrap: wrap;
-	}
+	@media screen and (min-width: 480px) {}
 
 	@media screen and (min-width: 768px) {}
 
