--- a/sass/base/_base-style.scss
+++ b/sass/base/_base-style.scss
@@ -35,7 +35,7 @@ button {
 .container {
 	margin-left: auto;
 	margin-right: auto;
-	width: 1200px;
+
 	padding-left: 15px;
 	padding-right: 15px;
 
@@ -43,7 +43,9 @@ button {
 
 	@media screen and (min-width: 768px) {}
 
-	@media screen and (min-width: 1200px) {}
+	@media screen and (min-width: 1200px) {
+		width: 1200px;
+	}
 
 }
 
